# mdx

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml  tag.yml
docs/: USAGE.md
docs/examples/: basic.md  er-full.md  er-identifying.md  er-minimal.md  er-styled.md  flowchart-advanced.md  flowchart-simple.md  flowchart-styled.md  flowchart-subgraph.md  mixed-content.md  sequence-styled.md  syntax-highlight-mixed.md  syntax-highlight.md  test-branch.md  test-complex.md  test-diamond.md  test-edges.md  test-linear.md  test-lr.md  test-merge.md  test-seq-activate.md  test-seq-alt.md  test-seq-arrows.md  test-seq-autonumber.md  test-seq-basic.md  test-seq-complex.md  test-seq-implicit.md  test-seq-loop.md  test-seq-multi.md  test-seq-nested.md  test-seq-notes.md  test-seq-opt.md  test-seq-par.md  test-seq-self.md
hooks/: install.sh  pre-commit  pre-push
site/: index.html  script.js  style.css
src/: config.rs  embed.rs  highlight.rs  main.rs  pager.rs  parser.rs  preview.rs  render.rs  self_update.rs  theme.rs  watch.rs
src/mermaid/: ascii.rs  color.rs  layout.rs  mod.rs  parse.rs
syntaxes/: NOTICE.md  Terraform.sublime-syntax
tests/: integration.rs  snapshots.rs
tests/snapshots/: snapshots__snapshot_basic_w120.snap  snapshots__snapshot_basic_w80.snap  snapshots__snapshot_er_full_w120.snap  snapshots__snapshot_er_full_w200.snap  snapshots__snapshot_er_identifying_w80.snap  snapshots__snapshot_er_minimal_w120.snap  snapshots__snapshot_er_minimal_w80.snap  snapshots__snapshot_er_styled_w120.snap  snapshots__snapshot_flowchart_advanced_w120.snap  snapshots__snapshot_flowchart_advanced_w80.snap  snapshots__snapshot_flowchart_simple_w120.snap  (+9 more)
(+35 files in other folders)
