[package]
name = "mdx"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.29"
syntect = { version = "5", default-features = false, features = ["parsing", "default-themes", "dump-load", "regex-fancy"] }

[dev-dependencies]
insta = "1"

[build-dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "yaml-load", "dump-create", "regex-fancy"] }
