[package]
name = "mermd"
version = "0.1.5"
edition = "2024"
description = "Terminal Markdown renderer with Mermaid flowcharts drawn as ASCII art"
license = "MIT"
repository = "https://github.com/aleandros/mdx"
homepage = "https://github.com/aleandros/mdx"
readme = "README.md"
keywords = ["markdown", "terminal", "mermaid", "cli", "tui"]
categories = ["command-line-utilities", "text-processing"]
include = [
    "src/**/*",
    "syntaxes/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md",
]

[[bin]]
name = "mdx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
notify = "6"
pulldown-cmark = "0.12"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5", default-features = false, features = ["parsing", "default-themes", "dump-load", "regex-fancy"] }
toml = "0.8"
unicode-width = "0.1"

[dev-dependencies]
insta = "1"

[build-dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "yaml-load", "dump-create", "regex-fancy"] }
